removing dependencies to grakn-cassandra script (TODO: don't hardcode pid file)