@@ -23,6 +23,8 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.util.stream.Collectors;
 
 /**
@@ -33,19 +35,35 @@ import java.util.stream.Collectors;
 
 
 public class OperatingSystemCalls {
-  public String readStdoutFromProcess(Process process) throws IOException {
-    try (BufferedReader catStdout =
-             new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
-      return catStdout.lines().collect(Collectors.joining());
+    public boolean fileExists(String path) {
+        return Files.exists(Paths.get(path));
     }
-  }
 
-  public Process exec(String[] args) throws IOException {
-    return Runtime.getRuntime().exec(args);
-  }
+    public int psP(int pid) throws IOException, InterruptedException {
+        Process ps = Runtime.getRuntime().exec(new String[]{"sh", "-c", " ps -p " + pid});
 
-  public boolean isMac() {
-    String OS = System.getProperty("os.name").toLowerCase();
-    return OS.contains("mac");
-  }
+        return ps.waitFor();
+    }
+
+    public int catPidFile(String file) throws IOException {
+        Process catProcess = Runtime.getRuntime().exec(new String[]{"sh", "-c", "cat " + file});
+        String lines = readStdoutFromProcess(catProcess);
+        return Integer.parseInt(lines);
+    }
+
+    public String readStdoutFromProcess(Process process) throws IOException {
+        try (BufferedReader catStdout =
+                 new BufferedReader(new InputStreamReader(process.getInputStream(), StandardCharsets.UTF_8))) {
+            return catStdout.lines().collect(Collectors.joining());
+        }
+    }
+
+    public Process exec(String[] args) throws IOException {
+        return Runtime.getRuntime().exec(args);
+    }
+
+    public boolean isMac() {
+        String OS = System.getProperty("os.name").toLowerCase();
+        return OS.contains("mac");
+    }
 }
